# market-data-domination

./: .gitignore  START-HERE.md  pyproject.toml
.github/: pull_request_template.md
contracts/: first_pass_contract.json
docs/: ARCHITECTURE.md  NEXT-IMPLEMENTATION-STEPS.md  START-HERE.md
docs/handover/: _native_core_cpp.cpp  farmer-config.json  farmer-failure-cases.md  farmer-principles.md  farmer-sample-events.ndjson  mexc_ingress.py  mvp_runtime_contract.json
docs/learnings/: architecture-principles-facts.md  lance-schema-deep-dive-for-ml-transformer-llm.md  lance-storage-efficiency-deep-dive-2026.md  mexc-data-sourcing-facts.md  picows-resilience-deep-dive.md  root-cause-observability-2026-deep-dive.md
docs/planning/: README.md
docs/planning/architecture/: README.md  first-pass-build-checklist.md  picows-optimization-plan.md  target-architecture-v1.md
docs/planning/decisions/: ADR-0001-governance-baseline.md  (+1 more)
docs/planning/mvp/: mvp-plan-v1.md  (+1 more)
docs/system_mapping/: README.md  glossary.md  index.md
native/data_plane/: Cargo.toml
scripts/: first_pass_smoke.sh  stress_resilience.sh  validate_first_pass.sh  validate_resilience.sh
src/control_plane/: __init__.py  config.py  lance_sink.py  live_run.py  main.py  observability.py  plan.py  registry.py  resilience_runtime.py  runtime_contract.py
src/market_data_domination.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_resilience_runtime.py
tests/resilience/: README.md  test_fault_injection_matrix.py  test_report_gate_matrix.py  test_resilience_report.py
(+17 files in other folders)
