[project]
name = "market-data-domination"
version = "0.1.0"
description = "Control plane for market data farmer MVP"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.13.0"
]

[project.scripts]
mdf-control = "control_plane.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
